<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LevelUp</string>
    <string name="action_settings">Settings</string>
    <string name="uebersicht">Übersicht</string>
    <string name="workout">Workout</string>
    <string name="workout_termine">Workout Termine</string>
    <string name="offene_termine">Offene Termine</string>
    <string name="termin">Neuer Termin</string>
    <string name="uebungen">Übungen</string>
    <string name="profil">Mein Profil</string>
    <string name="kalender">Kalender</string>
    <string name="einstellungen">Einstellungen</string>
    <string name="noProfil">Keine Profildaten</string>
    <string name="noWorkout">Keine Workoutdaten</string>
    <string name="bearbeiten">Bearbeiten</string>
    <string name="neueUebung">Neue Übung hinzufügen</string>
    <string name="neuesWorkout">Neues Workout hinzufügen</string>
    <string name="neuerTermin">Neuen Termin hinzufügen</string>
    <string name="workout_erstellen">Workout erstellen</string>
    <string name="termin_erstellen">Termin erstellen</string>
    <string name="name">Name</string>
    <string name="alter">Alter</string>
    <string name="geschlecht">Geschlecht</string>
    <string-array name="arrGeschlecht">
        <item>männlich</item>
        <item>weiblich</item>
    </string-array>
    <string name="groeße">Größe</string>
    <string name="gewicht">Gewicht</string>
    <string name="wunschgewicht">Wunschgewicht</string>
    <string name="bisher_erledigt">Bisher Erledigt</string>
    <string name="letztes_workout">Letztes Workout</string>
    <string name="naechstes_workout">Nächstes Workout</string>
    <string name="bmi">Body Mass Index</string>
    <string name="uebung">Übung</string>
    <string name="info">Info</string>
    <string name="wiederholungen">Wiederholungen</string>
    <string name="saetze">Sätze</string>
    <string name="muskelgruppen">Muskelgruppen</string>
    <string name="brust">Brust</string>
    <string name="bizeps">Bizeps</string>
    <string name="trizeps">Trizeps</string>
    <string name="bauch">Bauch</string>
    <string name="schulter">Schulter</string>
    <string name="ruecken">Rücken</string>
    <string name="zahl">Zahl</string>
    <string name="speichern">Speichern</string>
    <string name="neueBez">Neue Bezeichnung eingeben:</string>
    <string name="saveChanges">Änderungen gespeichert</string>
    <string name="workoutAuswaehlen">Workout auswählen:</string>
    <string name="kalenderEintrag">Kalendereintrag erstellen</string>
    <string name="letztesGewicht">Letztes Gewicht:</string>
    <string name="Gewicht">Gewicht:</string>
    <string name="letzteWiederholungen">Letzte Wiederholungen:</string>
    <string name="Wiederholungen">Wiederholungen:</string>
    <string name="letzteSaetze">Letzte Sätze:</string>
    <string name="Saetze">Sätze:</string>
    <string name="uebungAbschluss">Übung abgeschlossen</string>
    <string name="workouts">Workouts</string>
    <string name="proWoche">pro Woche</string>
    <string name="aktGewicht">Aktuelles Gewicht</string>
    <string name="schulterumfang">Schulterumfang</string>
    <string name="armumfang">Armumfang</string>
    <string name="brustumfang">Brustumfang</string>
    <string name="bauchumfang">Bauchumfang</string>
    <string name="hueftumfang">Hüftumfang</string>
    <string name="beinumfang">Beinumfang</string>

</resources>
