<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/iczedwhn"
    android:orientation="vertical"
    tools:context="${packageName}.${activityClass}" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/uProzent"
        android:layout_gravity="bottom|top"
        android:textSize="40dp"
        android:textColor="#FFFFFF"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/btnUebersicht"
            android:text="@string/uebersicht"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:background="@drawable/buttonshape"
            android:onClick="onButtonClick"
            android:layout_width="match_parent"
            android:layout_height="fill_parent" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/btnWorkout"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:background="@drawable/buttonshape"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:onClick="onButtonClick"
            android:text="@string/workout" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/btnUebungen"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:background="@drawable/buttonshape"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:onClick="onButtonClick"
            android:text="@string/uebungen" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/btnProfil"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:background="@drawable/buttonshape"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:onClick="onButtonClick"
            android:text="@string/profil" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/btnKalender"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:background="@drawable/buttonshape"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:onClick="onButtonClick"
            android:text="@string/kalender" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">


        <Button
            android:id="@+id/btnEinstellungen"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:background="@drawable/buttonshape"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:onClick="onButtonClick"
            android:text="@string/einstellungen" />
    </LinearLayout>

</LinearLayout>