<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent" android:layout_height="fill_parent">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="1"
    android:background="@drawable/hintergrund"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:text="@string/uebung"
        android:textColor="#FFFFFF"
        android:id="@+id/tvUebung"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/imgUebung"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/tvUebung"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/imgUebung"
        android:weightSum="3"
        android:id="@+id/linearLayout1">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="#FFFFFF"
            android:text="@string/info"
            android:id="@+id/tvInfo"
            android:textSize="20sp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:inputType="textMultiLine"
            android:id="@+id/txtInfo"
            android:layout_weight="2"
            android:gravity="top" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/linearLayout1"
        android:weightSum="2"
        android:id="@+id/linearLayout2">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="#FFFFFF"
            android:text="@string/gewicht"
            android:id="@+id/tvGewicht"
            android:textSize="20sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/txtGewicht"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:gravity="end"
            android:layout_weight="0.5" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/tvKG"
            android:text=" kg"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:layout_weight="0.5"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/linearLayout2"
        android:weightSum="2"
        android:id="@+id/linearLayout3">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="#FFFFFF"
            android:text="@string/wiederholungen"
            android:id="@+id/tvWiederholungen"
            android:textSize="20sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/txtWiederholungen"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:gravity="end"
            android:layout_weight="0.5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/linearLayout3"
        android:weightSum="2"
        android:id="@+id/linearLayout4">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="#FFFFFF"
            android:text="@string/saetze"
            android:id="@+id/tvSaetze"
            android:textSize="20sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/txtSaetze"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:gravity="end"
            android:layout_weight="0.5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout4"
        android:weightSum="2"
        android:id="@+id/linearLayout5">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="#FFFFFF"
            android:text="@string/muskelgruppen"
            android:id="@+id/tvMuskelgruppen"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bauch"
                android:id="@+id/cbBauch" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bizeps"
                android:id="@+id/cbBizeps"
                android:layout_below="@+id/cbBauch"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trizeps"
                android:id="@+id/cbTrizeps"
                android:layout_below="@+id/cbBizeps"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/brust"
                android:id="@+id/cbBrust"
                android:layout_below="@+id/cbTrizeps"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/schulter"
                android:id="@+id/cbSchulter"
                android:layout_below="@+id/cbBrust"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ruecken"
                android:id="@+id/cbRuecken"
                android:layout_below="@+id/cbSchulter"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/beine"
                android:id="@+id/cbBeine"
                android:layout_below="@+id/cbRuecken"/>
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout5">
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/speichern"
        android:textColor="#FFFFFF"
        android:background="@drawable/buttonshape"
        android:id="@+id/btnSpeichern"
        android:textSize="30sp" />

    </LinearLayout>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:textColor="#FFFFFF"
        android:id="@+id/grafik"
        android:background="@drawable/graf"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"/>

</RelativeLayout>
</ScrollView>